--- a/index.html
+++ b/index.html
@@ -1,4 +1,137 @@
+<!DOCTYPE HTML>
+<!--
+	Hielo by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
-<h1>Hello World!</h1>
-  <a href="podcast/index.html">podcast</a>
+	<head>
+		<title>Queer Kahani</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body>
+
+		<!-- Header -->
+			<header id="header" class="alt">
+				<div class="logo"><a href="index.html">Queer Kahani <span>by Sumu Tasib</span></a></div>
+				<a href="#menu">Menu</a>
+			</header>
+
+		<!-- Nav -->
+			<nav id="menu">
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="podcast/index.html">Podcast</a></li>
+				</ul>
+			</nav>
+
+		<!-- Banner -->
+			<section class="banner full">
+				<article>
+					<img src="images/banner.jpg"  alt="" />
+					<div class="inner">
+						<header>
+							<p>a place for queer stories</p>
+							<h2>Queer Kahani</h2>
+						</header>
+					</div>
+				</article>
+				<article>
+					<img src="images/banner3.jpg" alt="" />
+					<div class="inner">
+						<header>
+							<p>a place for queer stories</p>
+							<h2>Queer Kahani</h2>
+						</header>
+					</div>
+				</article>
+				<article>
+					<img src="images/banner2.jpg"  alt="" />
+					<div class="inner">
+						<header>
+							<p>a place for queer stories</p>
+							<h2>Queer Kahani</h2>
+						</header>
+					</div>
+				</article>
+			</section>
+
+		<!-- One -->
+			<section id="one" class="wrapper style2">
+				<div class="inner">
+					<div class="grid-style">
+
+						<div>
+							<div class="box">
+								<div class="image fit">
+									<img src="images/queerkahani_mainpage.jpg" alt="" />
+								</div>
+								<div class="content">
+									<header class="align-center">
+										<p>a podcast of queer stories</p>
+										<h2>The Podcast: Queer Kahani</h2>
+									</header>
+									<p> A quirky, queer podcast of bite-sized stories - happy stories, sad stories, first loves, worst loves, epiphanies, recipes, and everything in between. 
+										Episodes are available here and coming soon to Spotify and Apple Music. Story submissions and feedback are welcome by <a href="mailto:sumu.tasib@gmail.com">email</a>.
+									</p>
+									<footer class="align-center">
+										<a href="podcast/index.html" class="button alt">podcast</a>
+									</footer>
+								</div>
+							</div>
+						</div>
+
+						<div>
+							<div class="box">
+								<div class="image fit">
+									<img src="images/a_boy_named_su_book.jpg" alt="" />
+								</div>
+								<div class="content">
+									<header class="align-center">
+										<p>stories from a journey into genderqueerness</p>
+										<h2>The Book: A Boy Named Su</h2>
+									</header>
+									<p> A genderqueer journey through a gender-binary world, A Boy Named Su traces the footsteps of the author's confusion, shame, and eventual embrace of his sexuality and gender identity.
+										Now available at 
+										<a href="https://www.elliottbaybook.com/book/9798571858229">Elliott Bay Books</a>, 
+										<a href="https://www.amazon.com/Boy-Named-Stories-Journey-Genderqueerness/dp/B08P1KLT19">Amazon</a>, 
+										<a href="https://medium.com/a-boy-named-su">Medium</a> (free), and 
+										<a href="https://www.goodreads.com/book/show/56063681-a-boy-named-su">goodreads</a>.
+									</p>
+									<footer class="align-center">
+										<a href="https://www.goodreads.com/book/show/56063681-a-boy-named-su" class="button alt">reviews</a>
+									</footer>
+								</div>
+							</div>
+						</div>
+
+				</div>
+			</section>
+
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+					<ul class="icons">
+						<li><a href="https://twitter.com/SumuTasib" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/sumu.tasib/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="" class="icon fa-book"><span class="label">Facebook</span></a></li>
+						<li><a href="mailto:sumu.tasib@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					</ul>
+				</div>
+				<div class="copyright">
+					All images and text &copy; Sumu Tasib. HIELO site template by TEMPLATED.CO. All rights reserved.
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
