--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 	<head>
 		<title>Queer Kahani</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta property="og:image" content="https://queerkahani.com/images/queerkahani_preview.jpg" />
+		<meta property="og:image:width" content="1920"/>
+		<meta property="og:image:height" content="966"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
