--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<meta property="og:image" content="https://queerkahani.com/images/queerkahani_preview.jpg" />
 		<meta property="og:image:width" content="1920"/>
 		<meta property="og:image:height" content="966"/>
+		<meta property="og:description" content="A place for queer stories: podcast, books, and more from Sumu Tasib."
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
