--- a/podcast/comingsoon.html
+++ b/podcast/comingsoon.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Subscribing to Queer Kahani</title>
-  <meta name="description" content="Link Rot is a discussion held at the intersection of life and technology. Each week we dive into a subject that explores the changes going on in digital technology and the way it affects our lives. We discuss how technology impacts our very humanity and aim to have some fun along the way!">
+  <meta name="description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between.">
     
 
 <!-- Style Sheets -->
   <link rel="stylesheet" href="/podcast/css/main.css">
   <link rel="canonical" href="http://queerkahani.com/podcast/comingsoon">
-  <link rel="alternate" type="application/rss+xml" title="Queer Kahani - The Podcast" href="http://queerkahani.com/podcast/podcast.xml">
+  <link rel="alternate" type="application/rss+xml" title="Queer Kahani" href="http://queerkahani.com/podcast/podcast.xml">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
   
 <!-- Favicon -->
@@ -39,8 +39,8 @@
 <body>
     <div class="wrapper">
       <header>
-        <!-- <div class="logo"><a href="/podcast/index.html"><img src="/podcast/images/queerkahani_mainpage.jpg" height="100%"><h1 class="hidden">Queer Kahani - The Podcast</h1></a></div> -->
-        <div class="logo"><a href="https://queerkahani.com"><img src="/podcast/images/queerkahani_mainpage.jpg" class="logo"><div class="hidden">Queer Kahani - The Podcast</div></a></div>
+        <!-- <div class="logo"><a href="/podcast/index.html"><img src="/podcast/images/queerkahani_mainpage.jpg" height="100%"><h1 class="hidden">Queer Kahani</h1></a></div> -->
+        <div class="logo"><a href="https://queerkahani.com"><img src="/podcast/images/queerkahani_mainpage.jpg" class="logo"><div class="hidden">Queer Kahani</div></a></div>
         <!-- <h1>foo is a bar is a foo</h1> -->
 </header>
 
@@ -74,7 +74,7 @@
       <footer>
 
 <div class="container">
-    <p>Subscribe <a href="/podcast/podcast.xml">via RSS</a>, <a href="/podcast/comingsoon.html">iTunes</a>, or <a href="/podcast/comingsoon.html">Spotify</a> | Queer Kahani - The Podcast is <a href="/podcast/about.html"> built with Jekyll</a> | Licensed under CC-BY</p>
+    <p>Subscribe <a href="/podcast/podcast.xml">via RSS</a>, <a href="/podcast/comingsoon.html">iTunes</a>, or <a href="/podcast/comingsoon.html">Spotify</a> | Queer Kahani is <a href="/podcast/about.html"> built with Jekyll</a> | Licensed under CC-BY</p>
 </div>    
 
 </footer>
