--- a/podcast/episodes/episode-1-welcome-to-queer-kahani.html
+++ b/podcast/episodes/episode-1-welcome-to-queer-kahani.html
@@ -13,7 +13,7 @@
 <!-- Style Sheets -->
   <link rel="stylesheet" href="/podcast/css/main.css">
   <link rel="canonical" href="http://queerkahani.com/podcast/episodes/episode-1-welcome-to-queer-kahani.html">
-  <link rel="alternate" type="application/rss+xml" title="Queer Kahani - The Podcast" href="http://queerkahani.com/podcast/podcast.xml">
+  <link rel="alternate" type="application/rss+xml" title="Queer Kahani" href="http://queerkahani.com/podcast/podcast.xml">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
   
 <!-- Favicon -->
@@ -39,8 +39,8 @@
 <body>
     <div class="wrapper">
       <header>
-        <!-- <div class="logo"><a href="/podcast/index.html"><img src="/podcast/images/queerkahani_mainpage.jpg" height="100%"><h1 class="hidden">Queer Kahani - The Podcast</h1></a></div> -->
-        <div class="logo"><a href="https://queerkahani.com"><img src="/podcast/images/queerkahani_mainpage.jpg" class="logo"><div class="hidden">Queer Kahani - The Podcast</div></a></div>
+        <!-- <div class="logo"><a href="/podcast/index.html"><img src="/podcast/images/queerkahani_mainpage.jpg" height="100%"><h1 class="hidden">Queer Kahani</h1></a></div> -->
+        <div class="logo"><a href="https://queerkahani.com"><img src="/podcast/images/queerkahani_mainpage.jpg" class="logo"><div class="hidden">Queer Kahani</div></a></div>
         <!-- <h1>foo is a bar is a foo</h1> -->
 </header>
 
@@ -95,7 +95,7 @@
       <footer>
 
 <div class="container">
-    <p>Subscribe <a href="/podcast/podcast.xml">via RSS</a>, <a href="/podcast/comingsoon.html">iTunes</a>, or <a href="/podcast/comingsoon.html">Spotify</a> | Queer Kahani - The Podcast is <a href="/podcast/about.html"> built with Jekyll</a> | Licensed under CC-BY</p>
+    <p>Subscribe <a href="/podcast/podcast.xml">via RSS</a>, <a href="/podcast/comingsoon.html">iTunes</a>, or <a href="/podcast/comingsoon.html">Spotify</a> | Queer Kahani is <a href="/podcast/about.html"> built with Jekyll</a> | Licensed under CC-BY</p>
 </div>    
 
 </footer>
