updating summary text, also using new banner image everywhere

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="podcast/index.html">Podcast</a></li>
+					<li><a href="https://www.goodreads.com/book/show/56063681-a-boy-named-su">A Boy Named Su</a></li>
 				</ul>
 			</nav>
 
@@ -70,7 +71,8 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/queerkahani_mainpage.jpg" alt="" />
+									<!-- <img src="images/queerkahani_mainpage.jpg" alt="" /> -->
+									<img src="images/queer_kahani_podcast_banner.png" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
