--- a/podcast/comingsoon.html
+++ b/podcast/comingsoon.html
@@ -11,9 +11,9 @@
     
 
 <!-- Style Sheets -->
-  <link rel="stylesheet" href="/podcast/css/main.css">
-  <link rel="canonical" href="http://queerkahani.com/podcast/comingsoon">
-  <link rel="alternate" type="application/rss+xml" title="Queer Kahani" href="http://queerkahani.com/podcast/podcast.xml">
+  <link rel="stylesheet" href="file:///C:/git/sumutasib/sumutasib.github.io/podcast/css/main.css">
+  <link rel="canonical" href="http://sumutasib.github.iofile:///C:/git/sumutasib/sumutasib.github.io/podcast/comingsoon">
+  <link rel="alternate" type="application/rss+xml" title="Queer Kahani" href="http://sumutasib.github.iofile:///C:/git/sumutasib/sumutasib.github.io/podcast/podcast.xml">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
   
 <!-- Favicon -->
@@ -31,7 +31,7 @@
     <meta name="twitter:site" content="@sumutasib" />
     <meta name="twitter:title" content="Subscribing to Queer Kahani" />
     <meta name="twitter:description" content="" />
-    <meta name="twitter:image" content="http://queerkahani.com/podcast/images/itunes.png" />    
+    <meta name="twitter:image" content="http://sumutasib.github.iofile:///C:/git/sumutasib/sumutasib.github.io/podcast/images/itunes.png" />    
     
 </head>
 
@@ -39,19 +39,20 @@
 <body>
     <div class="wrapper">
       <header>
-        <!-- <div class="logo"><a href="/podcast/index.html"><img src="/podcast/images/queerkahani_mainpage.jpg" height="100%"><h1 class="hidden">Queer Kahani</h1></a></div> -->
-        <div class="logo"><a href="https://queerkahani.com"><img src="/podcast/images/queerkahani_mainpage.jpg" class="logo"><div class="hidden">Queer Kahani</div></a></div>
+        <!-- <div class="logo"><a href="file:///C:/git/sumutasib/sumutasib.github.io/podcast/index.html"><img src="file:///C:/git/sumutasib/sumutasib.github.io/podcast/images/queerkahani_mainpage.jpg" height="100%"><h1 class="hidden">Queer Kahani</h1></a></div> -->
+        <!-- <div class="logo"><a href="https://queerkahani.com"><img src="file:///C:/git/sumutasib/sumutasib.github.io/podcast/images/queerkahani_mainpage.jpg" class="logo"><div class="hidden">Queer Kahani</div></a></div> -->
+        <div class="logo"><a href="https://queerkahani.com"><img src="file:///C:/git/sumutasib/sumutasib.github.io/podcast/images/queer_kahani_podcast_banner.png" class="logo"><div class="hidden">Queer Kahani</div></a></div>
         <!-- <h1>foo is a bar is a foo</h1> -->
 </header>
 
 
       <nav>
     <ul>
-        <li><a href="/podcast/about.html">About</a></li>
-        <li><a href="/podcast/index.html">Episodes</a></li>
-        <li><a href="/podcast/comingsoon.html">iTunes</a></li>
-        <li><a href="/podcast/comingsoon.html">Spotify</a></li>
-        <li><a href="/podcast/podcast.xml">RSS</a></li>
+        <li><a href="file:///C:/git/sumutasib/sumutasib.github.io/podcast/about.html">About</a></li>
+        <li><a href="file:///C:/git/sumutasib/sumutasib.github.io/podcast/index.html">Episodes</a></li>
+        <li><a href="file:///C:/git/sumutasib/sumutasib.github.io/podcast/comingsoon.html">iTunes</a></li>
+        <li><a href="file:///C:/git/sumutasib/sumutasib.github.io/podcast/comingsoon.html">Spotify</a></li>
+        <li><a href="file:///C:/git/sumutasib/sumutasib.github.io/podcast/podcast.xml">RSS</a></li>
     </ul> 
 </nav>
 
@@ -74,7 +75,7 @@
       <footer>
 
 <div class="container">
-    <p>Subscribe <a href="/podcast/podcast.xml">via RSS</a>, <a href="/podcast/comingsoon.html">iTunes</a>, or <a href="/podcast/comingsoon.html">Spotify</a> | Queer Kahani is <a href="/podcast/about.html"> built with Jekyll</a> | Licensed under CC-BY</p>
+    <p>Subscribe <a href="file:///C:/git/sumutasib/sumutasib.github.io/podcast/podcast.xml">via RSS</a>, <a href="file:///C:/git/sumutasib/sumutasib.github.io/podcast/comingsoon.html">iTunes</a>, or <a href="file:///C:/git/sumutasib/sumutasib.github.io/podcast/comingsoon.html">Spotify</a> | Queer Kahani is <a href="file:///C:/git/sumutasib/sumutasib.github.io/podcast/about.html"> built with Jekyll</a> | Licensed under CC-BY</p>
 </div>    
 
 </footer>
