adding google analytics scripts to header and main qk index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 		<meta property="og:image:height" content="966"/>
 		<meta property="og:description" content="A place for queer stories: a podcast, a book, and more from Sumu Tasib." />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-0C8P6FRLYD"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'G-0C8P6FRLYD');
+		</script>
 	</head>
 	<body>
 
