updating page titles to differentiate them for analytics

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 	<head>
-		<title>Queer Kahani</title>
+		<title>Queer Kahani - A Place for Queer Stories</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta property="og:image" content="https://queerkahani.com/images/queerkahani_preview_zoom.jpg" />
