--- a/podcast/index.html
+++ b/podcast/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Queer Kahani</title>
+  <title>Queer Kahani - The Podcast</title>
   <meta name="description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between.">
     
 
@@ -29,7 +29,7 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@sumutasib" />
-  <meta name="twitter:title" content="" />
+  <meta name="twitter:title" content="Queer Kahani - The Podcast" />
   <meta name="twitter:description" content="" />
   <meta name="twitter:image" content="http://queerkahani.com/podcast/images/itunes.png" />    
   
