--- a/podsrc/index.html
+++ b/podsrc/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Queer Kahani - The Podcast
 ---
 <p>Welcome to <strong>Queer Kahani</strong>, a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. 
 More information about the podcast, how to submit your own stories, and how the podcast was built is available <a href="about.html">here</a>.</p>
