adding aboynamedsu page, submitastory page, writing bulk of descriptions for first two episodes

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 										<a href="https://www.goodreads.com/book/show/56063681-a-boy-named-su">goodreads</a>.
 									</p>
 									<footer class="align-center">
-										<a href="https://www.goodreads.com/book/show/56063681-a-boy-named-su" class="button alt">reviews</a>
+										<a href="aboynamedsu.html" class="button alt">book</a>
 									</footer>
 								</div>
 							</div>
