--- a/podcast/about.html
+++ b/podcast/about.html
@@ -83,9 +83,7 @@
 
 <h3 id="story-submissions">Story Submissions</h3>
 
-<p>Do you have a queer story to tell? Send it our way! Story submissions are welcome via <a href="mailto:sumu.tasib@gmail.com?subject=Queer Kahani Story Submission">email</a>. All kinds of stories are welcome, as long as they have a queer component to them.</p>
-
-<p>As for the submission itself, please keep it under 500 words - you don’t need to recount the whole story, just give us the gist and let us know why you think it would appeal to our audience. I can’t promise I’ll respond to every email, but I do promise to read all of them.</p>
+<p>Instructions on how to submit a story are <a href="submitastory.html">here</a>.</p>
 
 <h3 id="the-name">The Name</h3>
 
