updating URLs and other info, close to final for launch

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="podcast/index.html">Podcast</a></li>
-					<li><a href="https://www.goodreads.com/book/show/56063681-a-boy-named-su">A Boy Named Su</a></li>
+					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
 				</ul>
 			</nav>
 
