--- a/podcast/about.html
+++ b/podcast/about.html
@@ -12,8 +12,8 @@
 
   <!-- Style Sheets --> 
   <link rel="stylesheet" href="/podcast/css/main.css">
-  <link rel="canonical" href="http://queerkahani.com/podcast/about">
-  <link rel="alternate" type="application/rss+xml" title="Queer Kahani" href="http://queerkahani.com/podcast/podcast.xml">
+  <link rel="canonical" href="https://queerkahani.com/podcast/about">
+  <link rel="alternate" type="application/rss+xml" title="Queer Kahani" href="https://queerkahani.com/podcast/podcast.xml">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
   
   <!-- Favicon -->
@@ -31,7 +31,7 @@
   <meta name="twitter:site" content="@sumutasib" />
   <meta name="twitter:title" content="About Queer Kahani" />
   <meta name="twitter:description" content="" />
-  <meta name="twitter:image" content="http://queerkahani.com/podcast/images/itunes.png" />    
+  <meta name="twitter:image" content="https://queerkahani.com/podcast/images/itunes.png" />    
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0C8P6FRLYD"></script>
