updating header to contain facebook embed info and description to include URL

--- a/podcast/submitastory.html
+++ b/podcast/submitastory.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Submitting a Story to Queer Kahani</title>
-  <meta name="description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between.">
+  <meta name="description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. Learn more at https://queerkahani.com">
     
 
   <!-- Style Sheets --> 
@@ -31,7 +31,13 @@
   <meta name="twitter:site" content="@sumutasib" />
   <meta name="twitter:title" content="Submitting a Story to Queer Kahani" />
   <meta name="twitter:description" content="" />
-  <meta name="twitter:image" content="https://queerkahani.com/podcast/images/itunes.png" />    
+  <meta name="twitter:image" content="https://queerkahani.com/podcast/images/itunes.png" /> 
+  
+  <!-- Facebook -->
+  <meta property="og:image" content="https://queerkahani.com/podcast/images/queer_kahani_podcast_logo.png" />
+  <meta property="og:image:width" content="2000"/>
+  <meta property="og:image:height" content="2000"/>
+  <meta property="og:description" content="Queer Kahani is a quirky and queer podcast of bite-sized queer stories told in an interactive interview format." />
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0C8P6FRLYD"></script>
