--- a/podcast/episodes/episode-1-welcome-to-queer-kahani.html
+++ b/podcast/episodes/episode-1-welcome-to-queer-kahani.html
@@ -31,7 +31,13 @@
   <meta name="twitter:site" content="@sumutasib" />
   <meta name="twitter:title" content="Episode 1: Welcome to Queer Kahani" />
   <meta name="twitter:description" content="An introduction to the podcast and your host, Sumu Tasib." />
-  <meta name="twitter:image" content="https://queerkahani.com/podcast/images/itunes.png" />    
+  <meta name="twitter:image" content="https://queerkahani.com/podcast/images/itunes.png" /> 
+  
+  <!-- Facebook -->
+  <meta property="og:image" content="https://queerkahani.com/podcast/images/queer_kahani_podcast_logo.png" />
+  <meta property="og:image:width" content="2000"/>
+  <meta property="og:image:height" content="2000"/>
+  <meta property="og:description" content="Queer Kahani is a quirky and queer podcast of bite-sized queer stories told in an interactive interview format." />
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0C8P6FRLYD"></script>
