--- a/podcast/episodes/episode-1-welcome-to-queer-kahani.html
+++ b/podcast/episodes/episode-1-welcome-to-queer-kahani.html
@@ -37,7 +37,7 @@
   <meta property="og:image" content="https://queerkahani.com/podcast/images/queer_kahani_podcast_logo.png" />
   <meta property="og:image:width" content="2000"/>
   <meta property="og:image:height" content="2000"/>
-  <meta property="og:description" content="Queer Kahani is a quirky and queer podcast of bite-sized queer stories told in an interactive interview format." />
+  <meta property="og:description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. Learn more at https://queerkahani.com" />
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0C8P6FRLYD"></script>
