--- a/podcast/episodes/episode-1-welcome-to-queer-kahani.html
+++ b/podcast/episodes/episode-1-welcome-to-queer-kahani.html
@@ -65,7 +65,7 @@
         <li><a href="/podcast/about.html">About</a></li>
         <li><a href="/podcast/index.html">Episodes</a></li>
         <li><a href="/podcast/comingsoon.html">iTunes</a></li>
-        <li><a href="/podcast/comingsoon.html">Spotify</a></li>
+        <li><a href="https://open.spotify.com/show/5KajSwW2E4ilqF486Z508M?si=70d7df0bc8a84f11">Spotify</a></li>
         <li><a href="/podcast/podcast.xml">RSS</a></li>
     </ul> 
 </nav>
