adding Apple Podcasts link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 										<h2>The Podcast: Queer Kahani</h2>
 									</header>
 									<p> A quirky, queer podcast of bite-sized stories - happy stories, sad stories, first loves, worst loves, epiphanies, recipes, and everything in between. 
-										Episodes are available here and coming soon to Spotify and Apple Music. Story submissions and feedback are welcome by <a href="mailto:sumu.tasib@gmail.com">email</a>.
+										Episodes are available here as well as on Spotify and Apple Podcasts. Story submissions and feedback are welcome by <a href="mailto:sumu.tasib@gmail.com">email</a>.
 									</p>
 									<footer class="align-center">
 										<a href="podcast/index.html" class="button alt">podcast</a>
