--- a/podcast/comingsoon.html
+++ b/podcast/comingsoon.html
@@ -64,7 +64,7 @@
     <ul>
         <li><a href="/podcast/about.html">About</a></li>
         <li><a href="/podcast/index.html">Episodes</a></li>
-        <li><a href="/podcast/comingsoon.html">iTunes</a></li>
+        <li><a href="https://podcasts.apple.com/us/podcast/queer-kahani/id1602311754">iTunes</a></li>
         <li><a href="https://open.spotify.com/show/5KajSwW2E4ilqF486Z508M?si=70d7df0bc8a84f11">Spotify</a></li>
         <li><a href="/podcast/podcast.xml">RSS</a></li>
     </ul> 
