updating head.html with better descriptions/tags

--- a/podcast/episodes/episode-2-coming-out-twice.html
+++ b/podcast/episodes/episode-2-coming-out-twice.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Episode 2: Coming Out Twice</title>
-  <meta name="description" content="Coming Out TwiceBeckon tells us the story of how she’s had to come out twice over the course of her life, in two very different societal contexts. Along the ...">
+  <!-- <meta name="description" content="Coming Out TwiceBeckon tells us the story of how she’s had to come out twice over the course of her life, in two very different societal contexts. Along the ..."> -->
+  <meta name="description" content="Queer Kahani - Episode 2: Coming Out Twice - A story from Beckon about coming out twice.">
     
 
   <!-- Style Sheets --> 
@@ -28,16 +29,19 @@
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@sumutasib" />
+  <meta name="twitter:site" content="https://queerkahani.com" />
   <meta name="twitter:title" content="Episode 2: Coming Out Twice" />
   <meta name="twitter:description" content="A story from Beckon about coming out twice." />
   <meta name="twitter:image" content="https://queerkahani.com/podcast/images/itunes.png" /> 
   
   <!-- Facebook -->
   <meta property="og:image" content="https://queerkahani.com/podcast/images/queer_kahani_podcast_banner.png" />
-  <meta property="og:image:width" content="2000"/>
-  <meta property="og:image:height" content="2000"/>
-  <meta property="og:description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. Learn more at https://queerkahani.com" />
+  <meta property="og:image:width" content="2101"/>
+  <meta property="og:image:height" content="1183"/>
+  <meta property="og:url" content="https://queerkahani.com/podcast/episodes/episode-2-coming-out-twice.html" />
+  <meta property="og:title" content="Episode 2: Coming Out Twice" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="A story from Beckon about coming out twice." />
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0C8P6FRLYD"></script>
