--- a/podcast/index.html
+++ b/podcast/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Queer Kahani - The Podcast</title>
-  <meta name="description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. Learn more at https://queerkahani.com">
+  <!-- <meta name="description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. Learn more at https://queerkahani.com"> -->
+  <meta name="description" content="Queer Kahani - Queer Kahani - The Podcast - Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. Learn more at https://queerkahani.com">
     
 
   <!-- Style Sheets --> 
@@ -28,15 +29,18 @@
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@sumutasib" />
+  <meta name="twitter:site" content="https://queerkahani.com" />
   <meta name="twitter:title" content="Queer Kahani - The Podcast" />
-  <meta name="twitter:description" content="" />
+  <meta name="twitter:description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. Learn more at https://queerkahani.com" />
   <meta name="twitter:image" content="https://queerkahani.com/podcast/images/itunes.png" /> 
   
   <!-- Facebook -->
   <meta property="og:image" content="https://queerkahani.com/podcast/images/queer_kahani_podcast_banner.png" />
-  <meta property="og:image:width" content="2000"/>
-  <meta property="og:image:height" content="2000"/>
+  <meta property="og:image:width" content="2101"/>
+  <meta property="og:image:height" content="1183"/>
+  <meta property="og:url" content="https://queerkahani.com/podcast/" />
+  <meta property="og:title" content="Queer Kahani - The Podcast" />
+  <meta property="og:type" content="website" />
   <meta property="og:description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. Learn more at https://queerkahani.com" />
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
