--- a/podcast/submitastory.html
+++ b/podcast/submitastory.html
@@ -124,7 +124,7 @@
       <footer>
 
 <div class="container">
-    <p>Subscribe <a href="/podcast/podcast.xml">via RSS</a>, <a href="/podcast/comingsoon.html">iTunes</a>, or <a href="/podcast/comingsoon.html">Spotify</a> | Queer Kahani is <a href="/podcast/about.html"> built with Jekyll</a> | Licensed under CC-BY</p>
+    <p>Subscribe <a href="/podcast/podcast.xml">via RSS</a>, <a href="https://podcasts.apple.com/us/podcast/queer-kahani/id1602311754">iTunes</a>, or <a href="https://open.spotify.com/show/5KajSwW2E4ilqF486Z508M?si=70d7df0bc8a84f11">Spotify</a> | Queer Kahani is <a href="/podcast/about.html"> built with Jekyll</a> | Licensed under CC-BY</p>
 </div>    
 
 </footer>
