adding "Stories" section and link to Through the Walls

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="podcast/index.html">Podcast</a></li>
 					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
+					<li><a href="stories.html">Stories</a></li>
 				</ul>
 			</nav>
 
@@ -116,6 +117,28 @@
 									</p>
 									<footer class="align-center">
 										<a href="aboynamedsu.html" class="button alt">book</a>
+									</footer>
+								</div>
+							</div>
+						</div>
+
+						<div>
+							<div class="box">
+								<div class="image fit">
+									<img src="images/kindred_spirits_crop.jpg" alt="" />
+								</div>
+								<div class="content">
+									<header class="align-center">
+										<p>assorted works of fiction</p>
+										<h2>Stories</h2>
+									</header>
+									<p>Short works of fiction on themes of gender, sexuality, relationships, and social justice. Featuring "Through the Walls," a short story accepted for inclusion in the 2022 Seattle Erotic
+										Arts Festival (<a href="https://www.seattleerotic.org">SEAF</a>).
+										Sculpture credit: "Kindred Spirits" by 
+										<a href="https://www.bayutopia.com/about">Bayu Angermeyer</a>.
+									</p>
+									<footer class="align-center">
+										<a href="stories.html" class="button alt">stories</a>
 									</footer>
 								</div>
 							</div>
