--- a/aboynamedsu.html
+++ b/aboynamedsu.html
@@ -25,6 +25,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="podcast/index.html">Podcast</a></li>
 					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
+					<li><a href="stories.html">Stories</a></li>
 				</ul>
 			</nav>
 
