adding Mermaid story and Insta link

--- a/stories.html
+++ b/stories.html
@@ -62,6 +62,7 @@
 							<p> 
 								<ul style="margin-left: 5%">
 								<li><a href="https://sumutasib.medium.com/through-the-walls-f0fc8076dc61">Through the Walls*</a> - a tale of unexpected pandemic romance, selected for inclusion in the 2022 Seattle Erotic Arts Festival.</li>
+								<li><a href="https://sumutasib.medium.com/the-mermaid-of-shi-shi-beach-6ba564a19b89">The Mermaid of Shi Shi Beach</a> - a (very) short story inspired by Lori Evans' painting by the same name at the 2022 Seattle Erotic Arts Festival.</li>
 								</ul>
 							</p>
 							<p><i>
