--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="https://twitter.com/SumuTasib" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/sumu.tasib/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="" class="icon fa-book"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/sumu_tasib/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:sumu.tasib@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/SumuTasib" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
