adding bio page and picture

--- a/aboynamedsu.html
+++ b/aboynamedsu.html
@@ -26,18 +26,9 @@
 					<li><a href="podcast/index.html">Podcast</a></li>
 					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
 					<li><a href="stories.html">Stories</a></li>
+					<li><a href="sumutasib.html">Sumu Tasib</a></li>
 				</ul>
 			</nav>
-
-		<!-- One -->
-			<section id="One" class="wrapper style3"  style="background-image: url(images/a_boy_named_su_book.jpg);">
-				<div class="inner">
-					<header class="align-center">
-						<!-- <h2>A Boy Named Su:<br />
-                        Stories from a Journey into Genderqueerness</h2> -->
-					</header>
-				</div>
-			</section>
 
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
@@ -91,9 +82,8 @@
                                 </p>
                             <h4>About the Author</h4>
                                 <p>
-                                    Sumu Tasib is a writer, maker, and scientist living in Seattle, Washington. A Boy Named Su is his first book, a collection of stories also appearing on Medium under a publication of the same name. 
-                                    Su can be found on <a href="https://sumutasib.medium.com">Medium</a> or <a href="https://twitter.com/SumuTasib">Twitter</a> as @sumutasib and can be reached by email at <a href="mailto:sumu.tasib@gmail.com">sumu.tasib@gmail.com</a>.
-                                </p>
+									See <a href="sumutasib.html">Sumu Tasib's bio</a> to learn more about the author and how to contact them.
+								</p>
 						</div>
 					</div>
 				</div>
