--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 					<li><a href="podcast/index.html">Podcast</a></li>
 					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
 					<li><a href="stories.html">Stories</a></li>
+					<li><a href="sumutasib.html">Sumu Tasib</a></li>
 				</ul>
 			</nav>
 
