adding bio to frontpage

--- a/index.html
+++ b/index.html
@@ -145,6 +145,26 @@
 							</div>
 						</div>
 
+						<div>
+							<div class="box">
+								<div class="image fit">
+									<img src="images/profile_white_bg_widescreen.jpg" alt="" />
+								</div>
+								<div class="content">
+									<header class="align-center">
+										<p>bio and contact information</p>
+										<h2>The Author: Sumu Tasib</h2>
+									</header>
+									<p>
+										More information about the author, Sumu (Su) Tasib, including current projects, where to find their work online and in stores, and contact information including social media. Please use this page for all press inquiries.
+									</p>
+									<footer class="align-center">
+										<a href="stories.html" class="button alt">bio</a>
+									</footer>
+								</div>
+							</div>
+						</div>
+
 				</div>
 			</section>
 
