fixing bio link

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 										More information about the author, Sumu (Su) Tasib, including current projects, where to find their work online and in stores, and contact information including social media. Please use this page for all press inquiries.
 									</p>
 									<footer class="align-center">
-										<a href="stories.html" class="button alt">bio</a>
+										<a href="sumutasib.html" class="button alt">bio</a>
 									</footer>
 								</div>
 							</div>
