--- a/sumutasib.html
+++ b/sumutasib.html
@@ -51,7 +51,7 @@
 							</header>
                             <h4>Bio</h4>
                                 <p>
-									Sumu (Su) Tasib is a writer and scientist living in Seattle, Washington. <a href="aboynamedsu.html">A Boy Named Su</a> is their first book, a collection of non-fiction stories and essays about their journey
+									Sumu (Su) Tasib is an author and scientist living in Seattle, Washington. <a href="aboynamedsu.html">A Boy Named Su</a> is their first book, a collection of non-fiction stories and essays about their journey
 									with genderqueerness. 
 									Su also hosts the <a href="podcast/index.html">Queer Kahani podcast</a>, a series of bite-sized queer stories and discussions.
 									They are currently working on a set of <a href="stories.html">short stories</a>, the first of which, 
