--- a/sumutasib.html
+++ b/sumutasib.html
@@ -56,7 +56,9 @@
 									Su also hosts the <a href="podcast/index.html">Queer Kahani podcast</a>, a series of bite-sized queer stories and discussions.
 									They are currently working on a set of <a href="stories.html">short stories</a>, the first of which, 
 									<a href="https://sumutasib.medium.com/through-the-walls-f0fc8076dc61">"Through the Walls,"</a> was selected for inclusion in the 
-									2022 Seattle Erotic Arts Festival (<a href="https://www.seattleerotic.org/the-festival/">SEAF</a>). Su is available for readings and talks/discussions on the gender spectrum; contact them directly for bookings. 
+									2022 Seattle Erotic Arts Festival (<a href="https://www.seattleerotic.org/meet-the-literary-artists-of-seaf2022/">SEAF</a>) and 
+									appears in the <a href="https://www.amazon.com/Seattle-Erotic-Festival-Literary-Anthology/dp/1435795873">SEAF Literary Art Anthology 2022</a>. 
+									Su is available for readings and talks/discussions on the gender spectrum; contact them directly for bookings. 
 								</p>
 								
 								<p>
