adding events block and rearranging blocks

--- a/index.html
+++ b/index.html
@@ -126,20 +126,18 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/kindred_spirits_crop.jpg" alt="" />
+									<img src="images/bookstore_image.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>assorted works of fiction</p>
-										<h2>Stories</h2>
+										<p>upcoming readings and appearances</p>
+										<h2>Schedule of Events</h2>
 									</header>
-									<p>Short works of fiction on themes of gender, sexuality, relationships, and social justice. Featuring "Through the Walls," a short story accepted for inclusion in the 2022 Seattle Erotic
-										Arts Festival (<a href="https://www.seattleerotic.org">SEAF</a>).
-										Sculpture credit: "Kindred Spirits" by 
-										<a href="https://www.bayutopia.com/about">Bayu Angermeyer</a>.
+									<p>
+										Readings, signings, talks, and other events where Sumu will be appearing in the near future. To request appearances or inquire about unlisted events, please email Sumu using the contact information on the bio page.
 									</p>
 									<footer class="align-center">
-										<a href="stories.html" class="button alt">stories</a>
+										<a href="schedule.html" class="button alt">schedule</a>
 									</footer>
 								</div>
 							</div>
@@ -160,6 +158,28 @@
 									</p>
 									<footer class="align-center">
 										<a href="sumutasib.html" class="button alt">bio</a>
+									</footer>
+								</div>
+							</div>
+						</div>
+
+						<div>
+							<div class="box">
+								<div class="image fit">
+									<img src="images/kindred_spirits_crop.jpg" alt="" />
+								</div>
+								<div class="content">
+									<header class="align-center">
+										<p>assorted works of fiction</p>
+										<h2>Stories</h2>
+									</header>
+									<p>Short works of fiction on themes of gender, sexuality, relationships, and social justice. Featuring "Through the Walls," a short story accepted for inclusion in the 2022 Seattle Erotic
+										Arts Festival (<a href="https://www.seattleerotic.org">SEAF</a>).
+										Sculpture credit: "Kindred Spirits" by 
+										<a href="https://www.bayutopia.com/about">Bayu Angermeyer</a>.
+									</p>
+									<footer class="align-center">
+										<a href="stories.html" class="button alt">stories</a>
 									</footer>
 								</div>
 							</div>
