adding "schedule" to nav

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
 					<li><a href="stories.html">Stories</a></li>
 					<li><a href="sumutasib.html">Sumu Tasib</a></li>
+					<li><a href="schedule.html">Schedule</a></li>		
 				</ul>
 			</nav>
 
